# Oriented_Spanners

./: CMakeLists.txt  LICENSE  README.md
docs/: _config.yml  index.md
generators/: branch_gen.py  drawSolution.py  experiments -2page.py  experiments.py  generator.py  local_check.py  oSpannerIG.py  plots.py  short_edge_extractor.py  tools.py
src/: CMakeLists.txt  OriSpanner.cpp  OriSpanner.h
src/gpl_data_structure/: dgraph.cpp  dgraph.h  graph.cpp  graph.h
src/solvers/: solver.cpp  solver.h
src/solvers/solvers_1d/: solver_1D.cpp  solver_1D.h
src/solvers/solvers_1d/solver_1D1P/: dp1P.cpp  dp1P.h  sat1D1P.cpp  sat1D1P.h  simple1P.cpp  simple1P.h  solver1D1P.cpp  solver1D1P.h
src/solvers/solvers_1d/solver_1D2P/: flag.cpp  sat1D2P.cpp  sat1D2P.h  solver1D2P.cpp  solver1D2P.h
src/tools/: cxxopts.hpp  json.hpp  jsonM.cpp  jsonM.h  miscellaneous.cpp  miscellaneous.h  miscellaneous_exaction.cpp  miscellaneous_exaction.h
